kubernetes/bootstrap/elk/elk.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: elasticsearch-logging
  namespace: kube-system
spec:
  rules:
  - host: elasticsearch-logging.mufc
    http:
      paths:
      - path: /
        backend:
          serviceName: elasticsearch-logging
          servicePort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-logging
  namespace: kube-system
  labels:
    app: elasticsearch
    tier: backend
spec:
  ports:
  - name: api
    port: 9200
    targetPort: 9200
  - name: internal
    port: 9300
    targetPort: 9300
  selector:
    app: elasticsearch-logging
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch-logging
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch-logging
        tier: backend
    spec:
      serviceAccountName: elasticsearch
      containers:
      - name: elasticsearch-logging
        image: docker.elastic.co/elasticsearch/elasticsearch:5.6.4
        resources:
          # need more cpu upon initialization, therefore burstable class
          limits:
            cpu: 1000m
          requests:
            cpu: 100m
        ports:
        - containerPort: 9200
          name: db
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        # name must match the volume name below
        - name: nfs
          mountPath: "/usr/share/elasticsearch/data"
      volumes:
      - name: nfs
        persistentVolumeClaim:
          claimName: nfs-elasticsearch
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-logging
  namespace: kube-system
spec:
  rules:
  - host: kibana-logging.mufc
    http:
      paths:
      - path: /
        backend:
          serviceName: kibana-logging
          servicePort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-logging
  namespace: kube-system
  labels:
    app: kibana
    tier: frontend
spec:
  ports:
  - port: 5601
    targetPort: 5601
  selector:
    app: kibana-logging
    tier: frontend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana-logging
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana-logging
        tier: frontend
    spec:
      containers:
      - name: kibana-logging
        image: docker.elastic.co/kibana/kibana:5.6.4
        ports:
        - containerPort: 5601
